# lottery

./: README.md  run.txt  truffle-config.js
backend/: .gitignore  Cargo.toml  README.md
backend/src/: lib.rs  main.rs
backend/src/db/: mod.rs  model.rs  mongo.rs  query.rs
backend/src/routes/: game.rs  kakao.rs  mod.rs
contracts/: Lottery.sol  README.md  lottery.sol  lottery2.sol
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css  vite-env.d.ts
frontend/src/abis/: Lottery.json  Migrations.json
frontend/src/components/: CurrentLottery.svelte  Header.svelte
frontend/src/components/Account/: Admin.svelte
frontend/src/components/Error/: Exception.svelte
frontend/src/components/Header/: Header.svelte  HistoryNav.svelte  InfoNav.svelte  Logo.svelte  Nav.svelte
frontend/src/components/History/: LotteryHistory.svelte  MyTicketHistory.svelte  TicketHistory.svelte
frontend/src/components/List/: AllTicketHistoryList.svelte  HistoryList.svelte  LotteryHistoryList.svelte  MyTicketList.svelte
frontend/src/components/Lottery/: CurrentLottery.svelte  LotteryState.svelte
frontend/src/components/LotteryInfo/: Current.svelte  CurrentInfo.svelte  PastLottery.svelte  TicketBuy.svelte  TicketList.svelte
frontend/src/components/ScrollList/: App.svelte  List.svelte  ListItem.svelte  VirtualList.svelte  data.js
frontend/src/components/Wallet/: LoginTest.svelte  MetaMask.svelte
migrations/: 1_init.js  2_lottery.js
scripts/: simulation.py
tests/: test_algo.py  test_contract.js  test_lottery.py
(+5 files in other folders)
