[package]
name = "lottery"
version = "1.0.0"
edition = "2018"
# build = "build.rs"


[dependencies]
actix-rt = "2"
actix-http = "3"
actix-web = "4" 
actix-cors = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

kakao-rs = "0.3"
mongodb = "2"
futures = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[features]
default = ["mongo"]
mysql = []
mongo = []
